tests/ui/missing_field.stderr
error[E0063]: missing field `b` in initializer of `main::Args<_, _>`
 --> tests/ui/missing_field.rs:5:27
  |
5 |     query_args!("$a, $b", Args { a: test });
  |                           ^^^^ missing `b`
